syntax = "proto3";

package autd3;

import "utils.proto";

message Static { EmitIntensity intensity = 1; }

message SineInt {
  SamplingConfiguration config = 1;
  uint64 freq = 2;
  EmitIntensity intensity = 3;
  EmitIntensity offset = 4;
  Phase phase = 5;
}

message SineFloat {
  SamplingConfiguration config = 1;
  float freq = 2;
  EmitIntensity intensity = 3;
  EmitIntensity offset = 4;
  Phase phase = 5;
}

message SquareInt {
  SamplingConfiguration config = 1;
  uint64 freq = 2;
  EmitIntensity low = 3;
  EmitIntensity high = 4;
  float duty = 5;
}

message SquareFloat {
  SamplingConfiguration config = 1;
  float freq = 2;
  EmitIntensity low = 3;
  EmitIntensity high = 4;
  float duty = 5;
}

message Modulation {
  oneof modulation {
    Static static = 1;
    SineInt sine_int = 2;
    SineFloat sine_float = 3;
    SquareInt square_int = 4;
    SquareFloat square_float = 5;
  }
  Segment segment = 1001;
  optional TransitionMode transition_mode = 1002;
  optional uint64 transition_value = 1003;
}